# rusty-ssg

./: .gitignore  Cargo.toml  Dockerfile  README.md  notes.md
content/: CV.md  Publications.md  Teaching.md  blog.md  hello.md  index.md
content/assets/: asplos24.bib  poplsrc.bib
src/: main.rs  templates.rs
