[package]
name = "rusty-ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.6"
notify = "4.0.17"
pulldown-cmark = "0.9.1"

tokio = { version = "1.18.2", features = ["rt", "macros"] }
tower-http = { version = "0.3.3", features = ["fs"] }
walkdir = "2.3.2"
